# Obsidian-B7000

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
.claude/agents/: dsp-validator.md  schematic-checker.md
.claude/rules/: architecture.md  circuit.md  dsp.md  ui.md
.github/workflows/: ci.yml  release.yml
analysis/: README.md  analyze.py  base_rate_warp_measure.py  capture_outlier_scan.py  captures.py  cascade_analysis.py  comprehensive_report.py  dashboard_gen.py  eq_reference.py  farina_regression_check.py  farina_validate.py  fit_jfet_boundary.py  fit_nonlinear.py  gap_audit.py  gen_test_signal.py  grunt_a0_check.py  hf_thd_flatness_check.py  mixer_law.py  offline_render.cpp  reanchor_gm.py  render_smoke_check.py  report_audit.py  tone_thd_nyquist_check.py
analysis/reports/: example_dashboard.html  executive_summary.example.txt
docs/: build-plan.md  calibration-and-gain-staging.md  nonlinear-component-modeling.md  phase7-calibration-handover.md  phase7-handoff.md  ui-peripheral-spec.md  validation-and-capture.md
installer/linux/: build_deb.sh  control
installer/macos/: Distribution.xml  build_installer.sh
installer/windows/: Obsidian-B7000.nsi
schematics/: B7K info.txt  crop.py
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: Baxandall.h  Clipper.h  DriveStage.h  EqPreGain.h  FitParams.h  GainStaging.h  InputBuffer.h  JfetStage.h  LevelBlend.h  MasterOut.h  MidBand.h  MnaSolve.h  PedalChain.h  PedalDSP.h  RailClamp.h  RecoveryBridgedT.h  SallenKeyLPF.h  TrebleAttack.h
src/ui/: AttackGruntIcons.h  ImageLED.h  KnobComponent.h  PedalFace.cpp  PedalFace.h  PedalLookAndFeel.cpp  PedalLookAndFeel.h  SwitchLabelText.h  SwitchToggle.h
tests/: BaxandallTest.cpp  ClipperTest.cpp  DriveStageTest.cpp  EditorSnapshot.cpp  EqPreGainTest.cpp  InputBufferTest.cpp  JfetStageTest.cpp  LevelBlendTest.cpp  MasterOutTest.cpp  MidBandTest.cpp  OSValidationTest.cpp  PedalChainTest.cpp  RCLowpassTest.cpp  RecoveryBridgedTTest.cpp  SallenKeyLPFTest.cpp  TrebleAttackTest.cpp
ui/: component positions.csv  component_positions.csv
